Adds option to executions for instrumentation support to jol.